@startuml
title Class Diagram - Nghiep vu dat ve xem phim

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #475569
    FontColor #0F172A
    HeaderBackgroundColor #E2E8F0
}

class User {
    +UUID id
    +String username
    +String email
    +String avatarUrl
    +Boolean emailVerified
}

class Movie {
    +UUID id
    +String title
    +Integer duration
    +MovieStatus status
    +Boolean isDeleted
}

class Cinema {
    +UUID id
    +String name
    +String address
    +String city
    +Double latitude
    +Double longitude
}

class Room {
    +UUID id
    +String name
    +Boolean isDeleted
}

class Seat {
    +UUID id
    +String rowLabel
    +Integer seatNumber
    +SeatType seatType
    +BigDecimal priceMultiplier
}

class Showtime {
    +UUID id
    +LocalDateTime startTime
    +LocalDateTime endTime
    +BigDecimal basePrice
    +ShowtimeStatus status
    +Boolean isDeleted
}

class SeatStatus {
    +UUID id
    +SeatStatusType status
    +UUID holdBy
    +LocalDateTime holdUntil
    +Integer version
}

class Promotion {
    +UUID id
    +String code
    +DiscountType discountType
    +BigDecimal discountValue
    +Boolean isActive
}

class Booking {
    +UUID id
    +BigDecimal totalPrice
    +BigDecimal discountAmount
    +BookingStatus status
    +String secureToken
    +LocalDateTime paymentExpiresAt
}

class BookingDetail {
    +UUID id
    +BigDecimal priceAtBooking
}

class Payment {
    +UUID id
    +BigDecimal amount
    +PaymentMethod method
    +String transactionNo
    +PaymentStatus status
    +Json providerResponse
}

class PaymentEvent {
    +UUID id
    +PaymentEventType eventType
    +PaymentStatus paymentStatusBefore
    +PaymentStatus paymentStatusAfter
    +BookingStatus bookingStatusBefore
    +BookingStatus bookingStatusAfter
    +Boolean success
}

class Ticket {
    +UUID id
    +String qrCode
    +TicketStatus status
    +LocalDateTime checkInTime
    +UUID checkedBy
}

User "1" -- "0..*" Booking
Movie "1" -- "0..*" Showtime
Cinema "1" -- "0..*" Room
Room "1" -- "0..*" Seat
Room "1" -- "0..*" Showtime
Showtime "1" -- "0..*" SeatStatus
Seat "1" -- "0..*" SeatStatus
Showtime "1" -- "0..*" Booking
Promotion "0..1" -- "0..*" Booking
Booking "1" -- "1..*" BookingDetail
Seat "1" -- "0..*" BookingDetail
Booking "1" -- "0..*" Payment
Payment "1" -- "0..*" PaymentEvent
Booking "1" -- "0..*" PaymentEvent
BookingDetail "1" -- "0..1" Ticket

note right of BookingDetail
Dung field priceAtBooking
de khop entity Java va cot
booking_details.price_at_booking.
end note

note bottom of PaymentEvent
Hoan tien khi huy suat duoc ghi nhan bang
PaymentEventType.REFUND_REQUESTED,
khong phai mot BookingStatus rieng.
end note

@enduml
